# Allocator-Aware-Complex

./: CMakeLists.txt
include/: AllocationBlock.cpp  AllocationBlock.h  NewHandlerGuard.cpp  NewHandlerGuard.h  ObjectStorage.cpp  ObjectStorage.h
include/Allocator/: Allocator.h
